# Samples-AWS-Hands-On

intro_emr_studio/: SparkConverter.ipynb
intro_lambda_container/: app.py  requirements.txt  setup.py
intro_lambda_container/intro_lambda_container/: intro_lambda_container_stack.py
intro_lambda_container/intro_lambda_container/app/python_base_image/: Dockerfile  app.py  requirements.txt
intro_lambda_container/intro_lambda_container/app/python_custom_image/: Dockerfile  app.py  entrypoint.sh  requirements.txt
intro_lambda_container/intro_lambda_container/app/rust_custom_image/: Cargo.toml  Dockerfile
intro_lambda_container/intro_lambda_container/app/rust_custom_image/src/: main.rs
