[package]
name = "rust_custom_image"
version = "0.1.0"
authors = ["masatoshima"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda_runtime = "0.2.1"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0.123"
simple-error = "0.2.3"

# End
